Updated to 0.0.1-zeta from 0.0.1-epsilon.
Introduced the mut type qualifier and extended the formal grammar.